data/all_generated_tests/raw_wast_tests/block_UnreachableCodeExecution_2058.wast
;; 9. **Test 9: Block with Mismatched Operand Stack Using Unreachable**    - **Description**: Implement a block where the operand stack manipulations are mismatched before and after `unreachable`, testing whether the state management catches operand issues.    - **Constraint**: Verifies proper stack management when encountering an unreachable instruction within a block.

(assert_invalid
  (module
    (func $misaligned-operand-stack
      (block (result i32)
        (i32.const 42)
        unreachable
        (f64.const 0.0)
      )
    )
  )
  "type mismatch"
)